--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf dist && npx tsc",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts"
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "author": "elsa2@aluno.ifal.edu.br",
   "license": "ISC",
@@ -20,6 +20,8 @@
     "pino-http": "^9.0.0",
     "pino-pretty": "^10.3.1",
     "rimraf": "^5.0.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@types/node": "^20.10.5",
     "@types/pino": "^7.0.5",
     "@types/pino-http": "^5.8.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
