--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
       "@users/*": ["src/users/*"],
-      "@shared/*": ["src/shared/*"],
+      "@utils/*": ["src/utils/*"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
