--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "elsa2@aluno.ifal.edu.br",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -30,8 +32,10 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
     "@types/node": "^20.10.5",
     "@types/pino": "^7.0.5",
     "@types/pino-http": "^5.8.4",
