--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
     "paths": {
       "@users/*": ["src/core/domain/users/*"],
       "@utils/*": ["src/utils/*"],
-      "@shared/*": ["src/shared/*"]
+      "@shared/*": ["src/shared/*"],
+      "@config/*": ["src/api/config/*"],
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
